# Huihui-Qwable-Lab

./: .gitignore  README.md  pyproject.toml
docs/: evaluation_playbook.md
scenarios/: default.jsonl
src/qwable_lab/: __init__.py  cli.py  client.py  evals.py  hf.py  report.py
tests/: test_evals.py
